# Oraculum

./: .gitignore  README.md  README.vi.md  env.example  opencode.json  oraculum_completion_checklist.md  pyproject.toml  testHarness.md  testOracle.md
OR_env/: batch_pipeline.sh  launch_phase1.sh  realvuln_testing_guide.md  run_final_dryrun.sh  run_full_pipeline.sh  run_oraculum_pipeline.sh  run_repair_final.sh  run_repair_overnight.sh  run_repair_v3.sh  run_repair_v4.sh  run_repair_v5.sh  run_repair_v6.sh  run_repair_v7.sh  run_stratified_batch2.sh  run_stratified_batch3.sh  run_stratified_batch4.sh  run_stratified_batch5.sh  run_stratified_sample.sh
OR_env/logs/: final_results.json  final_results_v2.json  repair_final_results.json  repair_v4_results.json  repair_v5_results.json
benchmark/: README.md  flask_nested_routes_issue.md  run_benchmark.py  test_benchmark.py
benchmark-python/: classifications.bad-log
benchmark-python/classifications/: classification.md  (+1 more)
config/: classification.yaml  harness.yaml  mock_analysis.yaml  oracle.yaml
docs/: driver_agent_guide.md  oraculum_architecture_trace.md  oraculum_completion_checklist.md  plan_2026-05-29.md  repair-loop-guide.md  report.md  thesis-dai-sections.md  tomorrow_stage2_todo.md
experiments/: .gitignore
scripts/: run_repair_loop.py
tests/: test_classification.py  test_exploit_signatures.py  test_harness.py  test_harness_flask_template.py  test_ingest.py  test_key_pool.py  test_llm_client_pool.py  test_oracle.py  test_pipeline.py  test_prompt_seed_preservation.py  test_strategy.py  test_web_params.py
(+1452 files in other folders)
